# jomai

./: .gitignore  Cargo.toml  Justfile  LICENSE  README.md  rustfmt.toml
.github/workflows/: release.yml
app/: .eslintrc.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
app/src/: App.tsx  contextMenu.ts  dayjs.ts  main.tsx
app/src-tauri/: .env  .gitignore  Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: main.rs  menu.rs  path_recommendation.rs  tracing_helpers.rs
app/src/api/: core.ts
app/src/components/: AlertDialog.tsx  Box.tsx  Button.tsx  Checkbox.tsx  Column.tsx  Divider.tsx  DropdownMenu.tsx  Html.tsx  Icon.tsx  IconButton.tsx  IconLabelButton.tsx  Label.tsx  MultiSelect.tsx  ProgressBar.tsx  Row.tsx  Screen.tsx  Spacer.tsx  Tabs.tsx  Tag.tsx  Text.tsx  TextField.tsx  ThemeProvider.tsx  Toast.tsx  Tooltip.tsx  stitches.config.ts
app/src/components/styles/: borderStyles.ts  flexStyles.ts  (+4 more)
app/src/helpers/: useAddWatch.ts  useDeleteWatch.ts  useHover.ts  useKey.ts  usePathRecommendations.ts  useWatchState.ts
app/src/i18n/: i18next.ts  resources.ts
app/src/layout/: BasicLayout.tsx
app/src/main/: MainScreen.tsx
app/src/models/: Document.ts  Watch.ts
app/src/pathRecommendation/: Footer.tsx  Header.tsx  PathRecommendationList.tsx  PathRecommendationScreen.tsx
core/: .gitignore  Cargo.toml  README.md  sqlx-data.json
core/migrations/: 20220624082357_init.sql
core/src/: assets.rs  core.rs  documents.rs  lib.rs  path_string_normalization.rs  watches.rs
core/src/documents/: document_gatekeeper.rs  document_service.rs  file.rs  markdown.rs  search.rs
core/src/documents/document_repository/: document_db_command_processor.rs  document_repository.rs  helpers.rs  mod.rs
core/src/documents/search/: en_tokenizer.rs  index_writer.rs  ja_tokenizer.rs  japanese_character_normalizer.rs  ngram_tokenizer.rs  schema.rs  stopwords.rs
core/src/watches/: file_watcher.rs  jobs.rs  path_helpers.rs  watch_event_handler.rs  watch_repository.rs  watch_service.rs  watch_state_sync.rs
core/src/watches/jobs/: delete_watch_job.rs  job_manager.rs  parallelism.rs  scan_watch_job.rs  sync_watch_job.rs  tasks.rs
core/src/watches/jobs/job_queue/: job_repository.rs  mod.rs
core/src/watches/jobs/scan_watch_job/: report.rs
core/src/watches/jobs/sync_watch_job/: report.rs
core/src/watches/jobs/tasks/: add_documents.rs  get_documents.rs  scan_directory.rs  update_documents.rs
frontmatter/: Cargo.toml
frontmatter/src/: lib.rs  parser.rs
licenses/: about.hbs  about.toml  licenses.html
package-dir/: Cargo.toml
package-dir/src/: bower.rs  bundler.rs  chef.rs  cocoapods.rs  composer.rs  lib.rs  npm.rs  python.rs
(+20 files in other folders)
