[package]
name = "jomai-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
package-dir = { path = "../package-dir" }
frontmatter = { path = "../frontmatter" }

dotenv = "0.15.0"
anyhow = { version = "1.0.58", features = ["backtrace"] }
serde = { version = "1", features = ["derive"] }
toml = "0.5.9"
once_cell = "1.12.0"
sqlx = { version = "0.6.0", features = ["runtime-tokio-rustls", "sqlite", "offline", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3.21"
notify = "5.0.0-pre.15"
tokio = { version = "1", features = ["macros"] }
thiserror = "1.0.31"
unicode-normalization = "0.1.21"
pulldown-cmark = "0.9.2"
tempfile = "3.3.0"
itertools = "0.10.3"
lingua = { version = "1.4.0", default-features = false, features = ["japanese"] }
async-channel = "1.7.1"
jwalk = "0.6.0"
rust-embed = { version = "6.4.1", features = ["compression"] }
unicode-jp = "0.4.0"

tracing = "0.1"
tracing-futures = "0.2.5"

tantivy = "0.19.1"
tantivy-vibrato = { git = "https://github.com/akr4/tantivy-vibrato.git", branch = "main" }
