[package]
name = "app"
version = "0.1.0"
description = "A desktop search app specific to Markdown files"
authors = ["you"]
license = "MIT"
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"
publish = false

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }
chrono = "0.4"

[dependencies]
jomai-core = { path = "../../core" }
dotenv = "0.15.0"
anyhow = { version = "1.0.58", features = ["backtrace"] }
thiserror = "1.0.31"
futures = "0.3.21"
color-eyre = { version = "0.6", default-features = false }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-futures = "0.2.5"
tracing-appender = "0.2.2"
#tracing-appender = { git = "https://github.com/tokio-rs/tracing.git", rev = "b7ef939defb78e5b71cb6639016ec8452aa5d97e" }

sqlx = { version = "0.6.0" }
tokio = { version = "1" }
tokio-stream = { version = "0.1.9", features = ["sync"] }
chrono = "0.4.22"

tauri-plugin-window-state = "0.1"

# from Tauri
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1.1", features = ["clipboard-write-text", "dialog-open", "shell-open", "updater"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
